--- a/.github/workflows/daily_update.yml
+++ b/.github/workflows/daily_update.yml
@@ -2,12 +2,12 @@ name: 每日更新樂透網頁
 
 on:
   schedule:
-    # 每天國際標準時間 12:00 執行 (台灣時間晚上 8:00)
-    - cron: '0 12 * * *'
-  workflow_dispatch: # 讓你可以手動按按鈕測試
+    - cron: '0 12 * * *' # 每天 UTC 12:00 (台灣 20:00)
+  workflow_dispatch: # 允許手動執行
 
+# 這一區塊非常重要，賦予機器人寫入權限
 permissions:
-  contents: write # 重要！給機器人寫入檔案的權限
+  contents: write
 
 jobs:
   build:
@@ -22,13 +22,19 @@ jobs:
         with:
           python-version: '3.9'
 
-      - name: 執行 Python 程式 (產生 index.html)
+      - name: 執行 Python 程式
         run: python main.py
+
+      - name: 檢查 index.html 是否產生
+        run: |
+          ls -l index.html
+        # 如果這一步報錯，代表 main.py 根本沒產生檔案
 
       - name: 提交並更新網頁
         run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
           git add index.html
-          git commit -m "Auto update daily prediction" || exit 0
+          # 只有當有變動時才 commit，避免報錯
+          git commit -m "Auto update daily prediction" || echo "No changes to commit"
           git push
